@@ -6,6 +6,10 @@ include::include.adoc[]
 
 == 2.5 (tbd)
 
+=== Misc
+
+* Fix Pattern flags being dropped when `java.util.regex.Pattern` instances are used in Spock regex conditions spockIssue:2298[]
+
 == 2.4 (2025-12-11)
 
 _This is a summary of the highlights of the milestone releases_
